# ASG-TestDataScience-2

./: LICENSE  Makefile  README.md  predict.py  pyproject.toml  requirements.txt
data/interim/bounds/: lower_bound.pkl  upper_bound.pkl
models/: lstm_model.keras
notebooks/: main.ipynb
