[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "asg_testdatascience_2"
version = "0.0.1"
description = "This repository contains a project focused on multivariate time series regression using non-financial data without seasonality. The goal is to predict air quality metrics, specifically the concentration of NO2, using a Long Short-Term Memory (LSTM) model."
authors = [
  { name = "Antonio Segovia Galante" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.15"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["asg_testdatascience_2"]
force_sort_within_sections = true
